# wings

./: .gitignore  Cargo.toml  README.md
crates/wings_activity/: Cargo.toml
crates/wings_charm/: Cargo.toml
crates/wings_cosmic/: Cargo.toml
crates/wings_creation/: Cargo.toml
crates/wings_effect/: Cargo.toml
crates/wings_fiber/: Cargo.toml
crates/wings_geography/: Cargo.toml
crates/wings_meteorology/: Cargo.toml
crates/wings_motion/: Cargo.toml
crates/wings_paint/: Cargo.toml
crates/wings_pulse/: Cargo.toml
crates/wings_smash/: Cargo.toml
crates/wings_ui/: Cargo.toml
crates/wings_ui/src/: common_tags.rs  components.rs  enums.rs  events.rs  lib.rs  plugin.rs  systems.rs  utils.rs  visibility.rs
crates/wings_ui/src/classes/: alignment.rs  decoration.rs  edge_insets.rs  mod.rs  platform_classes.rs
crates/wings_ui/src/macros/: color.rs  define_ui_types.rs  edge_insets.rs  events.rs  mod.rs  types.rs  val.rs  widget_tree.rs
crates/wings_ui/src/queries/: color.rs  mod.rs  size.rs  text.rs  visibility.rs
crates/wings_ui/src/widgets/: alignment.rs  button.rs  constrained.rs  container.rs  direction.rs  divider.rs  gesture_detector.rs  mod.rs  padding.rs  paragraph.rs  scaffold.rs  screen.rs  sized_box.rs  text.rs  visibility.rs
crates/wings_ui_derive/: Cargo.toml
crates/wings_ui_derive/src/: custom_syntax.rs  lib.rs  widget_tree.rs
crates/wings_utils/: Cargo.toml
crates/wings_utils/src/: color.rs  lib.rs
crates/wings_vehicle/: Cargo.toml
crates/wings_weather/: Cargo.toml
crates/wings_wisdom/: Cargo.toml
src/: common_tags.rs  lib.rs  plugin.rs  tags.rs
src/queries/: color.rs  mod.rs  visibility.rs
src/widgets/: alignment.rs  mod.rs  screen.rs
