[package]
name = "wings_ui"
version = "0.0.1"
edition = "2021"
description = "A new way to build User Interfaces on top of BevyUI."
readme = "README.md"
repository = "https://github.com/thirdq/wings_ui/"
license = "Apache-2.0"
license-file = "LICENSE"
keywords = ["gamedev", "ui", "bevy"]
categories = ["gui", "game-development", "accessibility"]

exclude = [
    ".idea/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
rand = "0.8.5"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
