[package]
name = "wings"
version = "0.1.0-dev"
edition = "2021"
description = "A new way to build User Interfaces on top of BevyUI."
readme = "README.md"
repository = "https://github.com/thirdq/wings_ui/"
license-file = "LICENSE"
keywords = ["gamedev", "ui", "bevy", "wings", "engine"]
categories = ["game-engines", "gui", "game-development", "accessibility", "rendering"]
exclude = [".idea/", ".github/"]

[dependencies]
bevy = "0.11.2"

# Provides input mapping and actions functionality
wings_activity = { path = "crates/wings_activity", version = "0.1.0-dev" }

# Provides graphics and post processing functionality
wings_charm = { path = "crates/wings_charm", version = "0.1.0-dev" }

# Provides sky sphere with planets, stars and volumetric cloud functionality
wings_cosmic = { path = "crates/wings_cosmic", version = "0.1.0-dev" }

# Provides procedural generation and world partitioning functionality
wings_creation = { path = "crates/wings_creation", version = "0.1.0-dev" }

# Provides particle effects such as fire and waterfall functionality
wings_effect = { path = "crates/wings_effect", version = "0.1.0-dev" }

# Provides networking functionality
wings_fiber = { path = "crates/wings_fiber", version = "0.1.0-dev" }

# Provides geography like landscape, water and planets functionality
wings_geography = { path = "crates/wings_geography", version = "0.1.0-dev" }

# Provides story telling and cinema creation functionality
wings_motion = { path = "crates/wings_motion", version = "0.1.0-dev" }

# Provides painting on textures functionality
wings_paint = { path = "crates/wings_paint", version = "0.1.0-dev" }

# Provides audio mixer functionality
wings_pulse = { path = "crates/wings_pulse", version = "0.1.0-dev" }

# Provides physics destruction and deformation functionality
wings_smash = { path = "crates/wings_smash", version = "0.1.0-dev" }

# Provides user interface builder functionality
wings_ui = { path = "crates/wings_ui", version = "0.1.0-dev" }

# Provides utilities and miscellaneous functionality
wings_utils = { path = "crates/wings_utils", version = "0.1.0-dev" }

# Provides vehicle physics including cars, bicycles, boats and planes functionality
wings_vehicle = { path = "crates/wings_vehicle", version = "0.1.0-dev" }

# Provides rain, snow and dust functionality
wings_weather = { path = "crates/wings_weather", version = "0.1.0-dev" }

# Provides artificial intelligence and machine or deep learning functionality
wings_wisdom = { path = "crates/wings_wisdom", version = "0.1.0-dev" }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
