[package]
name = "wings"
version = "0.1.0-dev"
edition = "2021"
description = "A new way to build User Interfaces on top of BevyUI."
readme = "README.md"
repository = "https://github.com/thirdq/wings_ui/"
license-file = "LICENSE"
keywords = ["gamedev", "ui", "bevy", "wings", "engine"]
categories = ["game-engines", "gui", "game-development", "accessibility", "rendering"]
exclude = [".idea/", ".github/"]

[dependencies]
bevy = "0.11.3"

# Provides user interface builder functionality
wings_ui = { path = "crates/wings_ui", version = "0.1.0-dev" }

# Provides utilities and miscellaneous functionality
wings_utils = { path = "crates/wings_utils", version = "0.1.0-dev" }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
