[package]
name = "wings_ui"
version = "0.1.0-dev"
edition = "2021"
description = ""
repository = "https://github.com/thirdq/wings/"
license-file = "LICENSE"
keywords = ["wings"]

[dependencies]
wings_utils = { path = "../wings_utils", version = "0.1.0-dev" }
bevy = "0.11.3"
bevy_eventlistener = "0.5.0"
bevy_eventlistener_derive = "0.5.0"
