[package]
name = "wings_ui"
version = "0.1.0-dev"
edition = "2021"
description = ""
repository = "https://github.com/gabriel-gheorghe/wings/"
license-file = "LICENSE"
keywords = ["wings"]

[dependencies]
wings_utils = { path = "../wings_utils", version = "0.1.0-dev" }
bevy = "0.11.3"
bevy_mod_picking = "0.15.0"
paste = "1.0.14"